name:                fp-truncate
version:             1.0.0
synopsis:
    Tools and programs for truncating the significand of floating-point numbers
description:
    Tools and programs for truncating the number of bits in the significand of
    floating-point numbers. The numbers can be represented in decimal, binary or
    hexadecimal.
homepage:            https://github.com/aopp-pred/fp-truncate
license:             Apache-2.0
license-file:        LICENSE
author:              Andrew Dawson
maintainer:          andrew.dawson@physics.ox.ac.uk
copyright:           2017 Andrew Dawson
category:            Math
                   , Data
                   , Bit
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Truncate
                       , Truncate.Main
                       , Truncate.Internal
    build-depends:       base >= 4.7 && < 5
                       , data-binary-ieee754
                       , optparse-applicative
    default-language:    Haskell2010
    ghc-options:         -Wall -fno-warn-unused-binds

executable tr32b
    hs-source-dirs:      app
    main-is:             Bin32.hs
    ghc-options:         -Wall -fno-warn-unused-binds -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , fp-truncate
    default-language:    Haskell2010

executable tr64b
    hs-source-dirs:      app
    main-is:             Bin64.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , fp-truncate
    default-language:    Haskell2010

executable tr32d
    hs-source-dirs:      app
    main-is:             Dec32.hs
    ghc-options:         -Wall -fno-warn-unused-binds -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , fp-truncate
    default-language:    Haskell2010

executable tr64d
    hs-source-dirs:      app
    main-is:             Dec64.hs
    ghc-options:         -Wall -fno-warn-unused-binds -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , fp-truncate
    default-language:    Haskell2010

executable tr32h
    hs-source-dirs:      app
    main-is:             Hex32.hs
    ghc-options:         -Wall -fno-warn-unused-binds -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , fp-truncate
    default-language:    Haskell2010

executable tr64h
    hs-source-dirs:      app
    main-is:             Hex64.hs
    ghc-options:         -Wall -fno-warn-unused-binds -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , fp-truncate
    default-language:    Haskell2010

test-suite fp-truncate-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    other-modules:       Truncate.Test
                       , Truncate.Test.Truncatable.Convert
                       , Truncate.Test.Truncatable.FromBits
                       , Truncate.Test.Truncatable.MakeBits
                       , Truncate.Test.Truncatable.Operator
                       , Truncate.Test.Binary
                       , Truncate.Test.Decimal
                       , Truncate.Test.Hexadecimal
                       , Truncate.Internal.Test.TruncateWord
                       , Test.Truncate.Arbitrary
    build-depends:       base
                       , test-framework
                       , test-framework-quickcheck2
                       , test-framework-hunit
                       , QuickCheck
                       , HUnit
                       , data-binary-ieee754
                       , fp-truncate
    ghc-options:         -Wall -fno-warn-unused-binds -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

source-repository head
    type:     git
    location: https://github.com/aopp-pred/fp-truncate
